--- a/style.scss
+++ b/style.scss
@@ -6,36 +6,35 @@
 
 /* customizable snowflake styling */
 .snowflake {
-  color: #fff;
-  font-size: 1em;
-  font-family: Arial;
-  text-shadow: 0 0 1px #000;
-}
+    color: #fff;
+    font-size: 1em;
+    font-family: Arial;
+    text-shadow: 0 0 1px #000;
+  }
 
-@-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%{-webkit-transform:translateX(0px);transform:translateX(0px)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}100%{-webkit-transform:translateX(0px);transform:translateX(0px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%{transform:translateX(0px)}50%{transform:translateX(80px)}100%{transform:translateX(0px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}
+  @-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%{-webkit-transform:translateX(0px);transform:translateX(0px)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}100%{-webkit-transform:translateX(0px);transform:translateX(0px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%{transform:translateX(0px)}50%{transform:translateX(80px)}100%{transform:translateX(0px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}
 
-/* Demo Purpose Only*/
+  /* Demo Purpose Only*/
 .demo {
-  font-family: 'Raleway', sans-serif;
-    color:#fff;
-    display: block;
-    margin: 0 auto;
-    padding: 15px 0;
-    text-align: center;
-}
-.demo a{
-  font-family: 'Raleway', sans-serif;
-color: #000;		
-}
+    font-family: 'Raleway', sans-serif;
+      color:#fff;
+      display: block;
+      margin: 0 auto;
+      padding: 15px 0;
+      text-align: center;
+  }
+  .demo a{
+    font-family: 'Raleway', sans-serif;
+  color: #000;		
+  }
 
-
-/*CURSOR*/
+  /*CURSOR*/
 body, a, a:hover {
-  cursor: url(http://cur.cursors-4u.net/holidays/hol-4/hol356.cur), progress;
-}
+    cursor: url(http://cur.cursors-4u.net/holidays/hol-4/hol356.cur), progress;
+  }
 
-/*NAVBAR*/
-@mixin navegadorflex ($contenedor, $distribucion, $agrupacion, $colorfondo1, $titulos, $anchoweb, $altoweb, $fijacion, $estilolista, $escondido, $bloque, $tamanoletra, $relleno, $alturalinea, $colorletra, $nadadecoracion, $transicion){
+  /*NAVBAR*/
+@mixin navegadorflex ($contenedor, $distribucion, $agrupacion, $colorfondo1, $titulos, $anchoweb, $altoweb, $fijacion){
     
     display: $contenedor;
     justify-content: $distribucion;
@@ -45,30 +44,32 @@ body, a, a:hover {
     width: $anchoweb;
     height: $altoweb;
     position: $fijacion;
-    list-style: $estilolista;
-    overflow: $escondido;
-    font-size: $tamanoletra;
-    padding: $relleno;
-    line-height: $alturalinea;
-    color: $colorletra;
-    text-decoration: $nadadecoracion;
-    transition: $transicion;
 }
 
 .navbar{
     @include navegadorflex(flex, space-evenly, center, #d4131f, 'Chicle', 100%, 18%, fixed);
 }
 
-.right ul{
-    @include navegadorflex(flex, none, hidden);
+.right ul {
+    display: flex;
+    list-style: none;
+    overflow: hidden;
 }
 
-.right ul li a{
-    @include navegadorflex(block, 2em, 1rem 1rem, 3rem, white, none, all 1s);
+.right ul li a {
+    display: block;
+    font-size: 2em;
+    padding: 1rem 1rem;
+    line-height: 3rem;
+    color: white;
+    text-decoration: none;
+    transition: all 1s;
 }
 
-.right ul li a{
-    & :hover{ background-color: $colorletra; border-radius: 50px; color: $colorfondo1}
+.right ul li a:hover {
+    background-color: white;
+    border-radius: 50px;
+    color: #d4131f;
 }
 
 /*SECTION*/
@@ -137,37 +138,3 @@ section {
     position: absolute;
 }
 
-/*FOOTER*/
-@mixin piewebgrid ($rellenoizq, $rellenobloque, $letratexto, $anchomax, $tipoestilolista, $margenbloque, $borde, $bordearriba, $espacioentre){
-    
-    display: grid;
-    padding-left: $rellenoizq;
-    padding-block: $rellenobloque;
-    font-family: $letratexto;
-    max-width: $anchomax;
-    list-style-type: $tipoestilolista;
-    margin-block: $margenbloque;
-    border: $borde;
-    border-top: $bordearriba;
-    gap: $espacioentre;
-}
-.container {
-    @include piewebgrid (17rem, 2rem, #d4131f, white, Arial, (font-size: 1rem), 250rem, (height: 20rem))
-}
-
-a{
-    @include piewebgrid(none, none, white)
-}
-
-.list-link {
-    &:hover {color: #cca352;}
-}
-
-.footer__divider {
-    @include piewebgrid(1.5rem, none, white, 1px solid)
-}
-
-.list-bottom {
-    display: inline-flex;
-    @include piewebgrid(1rem)
-}
