--- a/style.scss
+++ b/style.scss
@@ -138,3 +138,39 @@ section {
     position: absolute;
 }
 
+/*FOOTER*/
+.container {
+  display: grid;
+  padding-left: 17rem;
+  padding-block: 2rem;
+  background-color: #d4131f;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  max-width: 250rem;
+  height: 20rem;
+  overflow: auto;
+  resize: horizontal;
+}
+
+a{
+  list-style-type: none;
+  text-decoration: none;
+  color: white;
+}
+
+.list-link:hover {
+  color: #cca352;
+}
+
+.footer__divider {
+  margin-block: 1,5rem;
+  border: none;
+  color: white;
+  border-top: 1px solid;
+}
+
+.list-bottom {
+  display: inline-flex;
+  gap: 1rem;
+}
