--- a/style.scss
+++ b/style.scss
@@ -72,6 +72,15 @@ body, a, a:hover {
     color: #d4131f;
 }
 
+@media screen and (max-width:805px) {
+  .list {
+      width: 100%;
+      height: 38%;
+      background-color: #d4131f;
+      display: flex;
+      top: 4rem;
+  }
+}
 /*SECTION*/
 section {
     font-family: Arial, Helvetica, sans-serif;
@@ -116,8 +125,8 @@ section {
     text-align: center;
     color: #cca352;
     background: rgba( 13, 84, 70, .2);
-	-webkit-backdrop-filter: blur(30px);
-	backdrop-filter: blur(30px);
+	  -webkit-backdrop-filter: blur(30px);
+	  backdrop-filter: blur(30px);
     z-index: 1;
     position: absolute;
 }
@@ -132,8 +141,8 @@ section {
     text-align: center;
     color: #cca352;
     background: rgba( 13, 84, 70, .2);
-	-webkit-backdrop-filter: blur(30px);
-	backdrop-filter: blur(30px);
+	  -webkit-backdrop-filter: blur(30px);
+	  backdrop-filter: blur(30px);
     z-index: 1;
     position: absolute;
 }
@@ -141,13 +150,13 @@ section {
 /*FOOTER*/
 .container {
   display: grid;
-  padding-left: 17rem;
-  padding-block: 2rem;
+  padding-left: 10%;
+  padding-block: 2%;
   background-color: #d4131f;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
-  max-width: 250rem;
+  max-width: 100%;
   height: 20rem;
   overflow: auto;
   resize: horizontal;
@@ -174,3 +183,4 @@ a{
   display: inline-flex;
   gap: 1rem;
 }
+
