--- a/style.css
+++ b/style.css
@@ -147,7 +147,11 @@
 }
 
 /*CURSOR*/
-body, a, a:hover {
+body {
+  background-color: #096552;
+}
+
+a, a:hover {
   cursor: url(http://cur.cursors-4u.net/holidays/hol-4/hol356.cur), progress;
 }
 
@@ -251,4 +255,256 @@ section {
   backdrop-filter: blur(30px);
   z-index: 1;
   position: absolute;
+}
+
+/*auri*/
+h1 {
+  text-align: center;
+  width: 100%;
+  height: 10%;
+  padding: 15%;
+  color: white;
+  font-family: chicle;
+}
+
+h2 {
+  text-align: center;
+  width: 100%;
+  height: 10%;
+  padding: 1%;
+  color: white;
+  font-family: chicle;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 400px 400px 400px;
+  grid-template-rows: 400px 400px 400px;
+  grid-gap: 20px;
+}
+
+.grid2 {
+  display: grid;
+  grid-template-columns: 400px 400px 400px;
+  grid-template-rows: 400px 400px 400px;
+  grid-gap: 20px;
+}
+
+.caja {
+  width: 400px;
+  height: 337px;
+  border: 3px solid white;
+  margin: 80px;
+  text-align: center;
+  line-height: 30px;
+  padding: 80px;
+  background-color: #0d5446;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 8px;
+  box-shadow: 0 10px 25px rgba(92, 99, 105, 0.2);
+}
+
+.arbol {
+  width: auto px;
+  height: 50px;
+  text-align: center;
+}
+
+.campanas {
+  width: auto px;
+  height: 50px;
+  text-align: center;
+}
+
+.reyes {
+  width: auto px;
+  height: 50px;
+  text-align: center;
+}
+
+.sobre {
+  width: auto px;
+  height: 50px;
+  text-align: center;
+}
+
+.estrella {
+  width: auto px;
+  height: 50px;
+  text-align: center;
+}
+
+.nacimiento {
+  width: auto px;
+  height: 50px;
+  text-align: center;
+}
+
+.texto1 {
+  margin-top: 20px;
+  font-size: medium;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: white;
+  line-height: 0.6cm;
+}
+
+.texto2 {
+  margin-top: 20px;
+  font-size: medium;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: white;
+  line-height: 0.6cm;
+}
+
+.texto3 {
+  margin-top: 20px;
+  font-size: medium;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: white;
+  line-height: 0.6cm;
+}
+
+.texto4 {
+  margin-top: 20px;
+  font-size: medium;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: white;
+  line-height: 0.6cm;
+}
+
+.texto5 {
+  margin-top: 20px;
+  font-size: medium;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: white;
+  line-height: 0.6cm;
+}
+
+.texto6 {
+  margin-top: 20px;
+  font-size: medium;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: white;
+  line-height: 0.6cm;
+}
+
+.linea {
+  border-top: 4px solid white;
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-top: -300px;
+}
+
+.titulos {
+  font-family: chicle;
+  color: white;
+  line-height: 1;
+  font-size: 30;
+}
+
+.sobre2 {
+  width: auto px;
+  height: 60px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.regalo {
+  width: auto px;
+  height: 60px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.despertador {
+  width: auto px;
+  height: 60px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.caja2 {
+  width: 400px;
+  height: 140px;
+  margin: 80px;
+  text-align: center;
+  line-height: 65px;
+  padding: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 8px;
+  box-shadow: 0 10px 25px rgba 92, 99, 105, 0.2;
+  background-color: #0d5446;
+}
+
+.salto {
+  color: #cca352;
+}
+
+.texto7 {
+  font-size: medium;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  line-height: 0.6cm;
+  padding: 65px;
+}
+
+.texto8 {
+  font-size: medium;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  line-height: 0.6cm;
+  padding: 65px;
+}
+
+.texto9 {
+  font-size: medium;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  line-height: 0.6cm;
+  padding: 65px;
+}
+
+.linea2 {
+  border-top: 4px solid white;
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-top: -650px;
+  margin-bottom: 100px;
+}
+
+/*FOOTER*/
+.container {
+  display: grid;
+  padding-left: 17rem;
+  padding-block: 2rem;
+  background-color: #d4131f;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  max-width: 250rem;
+  height: 20rem;
+  overflow: auto;
+  resize: horizontal;
+}
+
+a {
+  list-style-type: none;
+  text-decoration: none;
+  color: white;
+}
+
+.list-link:hover {
+  color: #cca352;
+}
+
+.footer__divider {
+  margin-block: 1, 5rem;
+  border: none;
+  color: white;
 }/*# sourceMappingURL=style.css.map */
