--- a/style.css
+++ b/style.css
@@ -1,3 +1,190 @@
+/*EFECTO NIEVE*/
+.intro,
+.intro a {
+  color: #fff;
+}
+
+/* customizable snowflake styling */
+.snowflake {
+  color: #fff;
+  font-size: 1em;
+  font-family: Arial;
+  text-shadow: 0 0 1px #000;
+}
+
+@-webkit-keyframes snowflakes-fall {
+  0% {
+    top: -10%;
+  }
+  100% {
+    top: 100%;
+  }
+}
+@-webkit-keyframes snowflakes-shake {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(80px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+@keyframes snowflakes-fall {
+  0% {
+    top: -10%;
+  }
+  100% {
+    top: 100%;
+  }
+}
+@keyframes snowflakes-shake {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(80px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+.snowflake {
+  position: fixed;
+  top: -10%;
+  z-index: 9999;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+  -webkit-animation-name: snowflakes-fall, snowflakes-shake;
+  -webkit-animation-duration: 10s, 3s;
+  -webkit-animation-timing-function: linear, ease-in-out;
+  -webkit-animation-iteration-count: infinite, infinite;
+  -webkit-animation-play-state: running, running;
+  animation-name: snowflakes-fall, snowflakes-shake;
+  animation-duration: 10s, 3s;
+  animation-timing-function: linear, ease-in-out;
+  animation-iteration-count: infinite, infinite;
+  animation-play-state: running, running;
+}
+
+.snowflake:nth-of-type(0) {
+  left: 1%;
+  -webkit-animation-delay: 0s, 0s;
+  animation-delay: 0s, 0s;
+}
+
+.snowflake:nth-of-type(1) {
+  left: 10%;
+  -webkit-animation-delay: 1s, 1s;
+  animation-delay: 1s, 1s;
+}
+
+.snowflake:nth-of-type(2) {
+  left: 20%;
+  -webkit-animation-delay: 6s, 0.5s;
+  animation-delay: 6s, 0.5s;
+}
+
+.snowflake:nth-of-type(3) {
+  left: 30%;
+  -webkit-animation-delay: 4s, 2s;
+  animation-delay: 4s, 2s;
+}
+
+.snowflake:nth-of-type(4) {
+  left: 40%;
+  -webkit-animation-delay: 2s, 2s;
+  animation-delay: 2s, 2s;
+}
+
+.snowflake:nth-of-type(5) {
+  left: 50%;
+  -webkit-animation-delay: 8s, 3s;
+  animation-delay: 8s, 3s;
+}
+
+.snowflake:nth-of-type(6) {
+  left: 60%;
+  -webkit-animation-delay: 6s, 2s;
+  animation-delay: 6s, 2s;
+}
+
+.snowflake:nth-of-type(7) {
+  left: 70%;
+  -webkit-animation-delay: 2.5s, 1s;
+  animation-delay: 2.5s, 1s;
+}
+
+.snowflake:nth-of-type(8) {
+  left: 80%;
+  -webkit-animation-delay: 1s, 0s;
+  animation-delay: 1s, 0s;
+}
+
+.snowflake:nth-of-type(9) {
+  left: 90%;
+  -webkit-animation-delay: 3s, 1.5s;
+  animation-delay: 3s, 1.5s;
+}
+
+/* Demo Purpose Only*/
+.demo {
+  font-family: "Raleway", sans-serif;
+  color: #fff;
+  display: block;
+  margin: 0 auto;
+  padding: 15px 0;
+  text-align: center;
+}
+
+.demo a {
+  font-family: "Raleway", sans-serif;
+  color: #000;
+}
+
+/*CURSOR*/
+body, a, a:hover {
+  cursor: url(http://cur.cursors-4u.net/holidays/hol-4/hol356.cur), progress;
+}
+
+/*NAVBAR*/
+.navbar {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #d4131f;
+  font-family: "Chicle";
+  width: 100%;
+  height: 18%;
+  position: fixed;
+}
+
+.right ul {
+  display: flex;
+  list-style: none;
+  overflow: hidden;
+}
+
+.right ul li a {
+  display: block;
+  font-size: 2em;
+  padding: 1rem 1rem;
+  line-height: 3rem;
+  color: white;
+  text-decoration: none;
+  transition: all 1s;
+}
+
+.right ul li a:hover {
+  background-color: white;
+  border-radius: 50px;
+  color: #d4131f;
+}
+
 h1 {
   font-family: "Chicle";
   padding-top: 20%;
@@ -67,6 +254,74 @@ h1 {
   width: auto px;
   height: 50px;
   text-align: center;
+}
+
+/*SECTION*/
+section {
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top: 8rem;
+  padding-bottom: -1rem;
+  width: 100%;
+  height: 40rem;
+  background-image: linear-gradient(to bottom right, #011410 0%, #043229 20%, #075041 40%, #096552 60%, #529385 80%);
+  background-size: 200% 200%;
+  -webkit-animation: movimiento 5s linear infinite alternate;
+          animation: movimiento 5s linear infinite alternate;
+}
+
+@-webkit-keyframes movimiento {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 100% 100%;
+  }
+}
+
+@keyframes movimiento {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 100% 100%;
+  }
+}
+.flex-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card1 {
+  width: 17rem;
+  height: 17rem;
+  padding: 4rem;
+  top: 30%;
+  left: 27%;
+  border-radius: 150px;
+  text-align: center;
+  color: #cca352;
+  background: rgba(13, 84, 70, 0.2);
+  -webkit-backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
+  z-index: 1;
+  position: absolute;
+}
+
+.card2 {
+  width: 17rem;
+  height: 17rem;
+  padding: 4rem;
+  top: 45%;
+  left: 67%;
+  border-radius: 150px;
+  text-align: center;
+  color: #cca352;
+  background: rgba(13, 84, 70, 0.2);
+  -webkit-backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
+  z-index: 1;
+  position: absolute;
 }
 
 .texto1 {
@@ -209,4 +464,39 @@ h1 {
 
 .verde {
   background-color: #0d5446;
+}
+
+/*FOOTER*/
+.container {
+  display: grid;
+  padding-left: 17rem;
+  padding-block: 2rem;
+  background-color: #d4131f;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  max-width: 250rem;
+  height: 20rem;
+}
+
+a {
+  list-style-type: none;
+  text-decoration: none;
+  color: white;
+}
+
+.list-link:hover {
+  color: #cca352;
+}
+
+.footer__divider {
+  margin-block: 1, 5rem;
+  border: none;
+  color: white;
+  border-top: 1px solid;
+}
+
+.list-bottom {
+  display: inline-flex;
+  gap: 1rem;
 }/*# sourceMappingURL=style.css.map */
