--- a/style.css
+++ b/style.css
@@ -269,61 +269,6 @@ section {
           animation: movimiento 5s linear infinite alternate;
 }
 
-@-webkit-keyframes movimiento {
-  from {
-    background-position: 0 0;
-  }
-  to {
-    background-position: 100% 100%;
-  }
-}
-
-@keyframes movimiento {
-  from {
-    background-position: 0 0;
-  }
-  to {
-    background-position: 100% 100%;
-  }
-}
-.flex-row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.card1 {
-  width: 17rem;
-  height: 17rem;
-  padding: 4rem;
-  top: 30%;
-  left: 27%;
-  border-radius: 150px;
-  text-align: center;
-  color: #cca352;
-  background: rgba(13, 84, 70, 0.2);
-  -webkit-backdrop-filter: blur(30px);
-  backdrop-filter: blur(30px);
-  z-index: 1;
-  position: absolute;
-}
-
-.card2 {
-  width: 17rem;
-  height: 17rem;
-  padding: 4rem;
-  top: 45%;
-  left: 67%;
-  border-radius: 150px;
-  text-align: center;
-  color: #cca352;
-  background: rgba(13, 84, 70, 0.2);
-  -webkit-backdrop-filter: blur(30px);
-  backdrop-filter: blur(30px);
-  z-index: 1;
-  position: absolute;
-}
-
 .texto1 {
   margin-top: 20px;
   font-size: medium;
@@ -466,6 +411,113 @@ section {
   background-color: #0d5446;
 }
 
+/*contacto*/
+body .signupFrm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+body .form {
+  background-color: white;
+  width: 400px;
+  border-radius: 8px;
+  padding: 20px 40px;
+  box-shadow: 0 10px 25px rgba(92, 99, 105, 0.2);
+}
+body .title {
+  font-size: 50px;
+  margin-bottom: 50px;
+}
+body .inputContainer {
+  position: relative;
+  height: 45px;
+  width: 90%;
+  margin-bottom: 17px;
+}
+body .input {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  border: 1px solid #DADCE0;
+  border-radius: 7px;
+  font-size: 16px;
+  padding: 0 100px;
+  outline: none;
+  background: none;
+  z-index: 1;
+}
+body ::-moz-placeholder {
+  color: transparent;
+}
+body :-ms-input-placeholder {
+  color: transparent;
+}
+body ::placeholder {
+  color: transparent;
+}
+body .label {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  padding: 0 4px;
+  background-color: transparent;
+  color: #12c830;
+  font-size: 16px;
+  transition: 0.5s;
+  z-index: 0;
+}
+body .submitBtn {
+  display: block;
+  margin-left: auto;
+  padding: 15px 30px;
+  border: none;
+  background-color: rgb(224, 232, 227);
+  color: white;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 30px;
+}
+body .submitBtn:hover {
+  background-color: #e8ece9;
+  transform: translateY(-2px);
+}
+body .input:focus + .label {
+  top: -7px;
+  left: 3px;
+  z-index: 10;
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(0, 9, 2);
+}
+body .input:focus {
+  border: 2px solid rgb(8, 178, 84);
+}
+body .input:not(:-moz-placeholder-shown) + .label {
+  top: -7px;
+  left: 3px;
+  z-index: 10;
+  font-size: 14px;
+  font-weight: 600;
+}
+body .input:not(:-ms-input-placeholder) + .label {
+  top: -7px;
+  left: 3px;
+  z-index: 10;
+  font-size: 14px;
+  font-weight: 600;
+}
+body .input:not(:placeholder-shown) + .label {
+  top: -7px;
+  left: 3px;
+  z-index: 10;
+  font-size: 14px;
+  font-weight: 600;
+}
+
 /*FOOTER*/
 .container {
   display: grid;
@@ -477,6 +529,8 @@ section {
   font-size: 1rem;
   max-width: 250rem;
   height: 20rem;
+  overflow: auto;
+  resize: horizontal;
 }
 
 a {
@@ -493,10 +547,4 @@ a {
   margin-block: 1, 5rem;
   border: none;
   color: white;
-  border-top: 1px solid;
-}
-
-.list-bottom {
-  display: inline-flex;
-  gap: 1rem;
 }/*# sourceMappingURL=style.css.map */
