--- a/style.scss
+++ b/style.scss
@@ -78,6 +78,56 @@ h1{
   color: white;
   text-align: center;
 }
+/*PAGINA SILVIA*/
+.colorbody{
+  background-color: #096552;
+}
+
+.titulo{
+  text-align: center;
+  color: white;
+  padding-top: 10%;
+  font-family: "chicle", "Courier New", Courier,  monospace;
+  font-weight: lighter;
+}
+.parrafos{
+  text-align: center;
+  color: white;
+  margin-top: 50%;
+  margin-left: 20%;
+ align-items: center;
+  font-family: "Comfortaa", cursive;
+  font-weight: bold;
+  margin-block: 40px;
+  height: 85vh; 
+  background-color: #0d5446;
+  width: 900px;
+  border-radius: 8px;
+  padding: 20px 40px;
+  box-shadow: 0 10px 25px rgba(92, 99, 105, 0.2);
+}
+.baner{
+  margin-top: 5%;
+  width: 100%;
+  height: 80%;
+ }
+ button{
+  height: 7%;
+  background-color: #d4131f;
+  color: white;
+  border-radius: 10%;
+  font-family:'Chicle', cursive;
+  border: #d4131f;
+  align-items: center;
+  margin-top: 25%;
+  }
+
+  #papa {
+    width: 300px;
+    padding:10px;
+    align-items: center;
+  }
+/*FIN PAGINA SILVIA*/
 
 @mixin gri{
   display: grid;
@@ -160,6 +210,54 @@ section {
     background-size: 200% 200%; 
     animation: movimiento 5s linear infinite alternate;
 }
+
+@keyframes movimiento {
+  from {
+    background-position: 0 0;
+  }
+  to{
+    background-position: 100% 100%;
+  }
+}  
+
+.flex-row{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card1 {
+  width: 17rem;
+  height: 17rem;
+  padding: 4rem;
+  top: 30%;
+  left: 27%;
+  border-radius: 150px;
+  text-align: center;
+  color: #cca352;
+  background: rgba( 13, 84, 70, .2);
+  -webkit-backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
+  z-index: 1;
+  position: absolute;
+}
+
+.card2 {
+  width: 17rem;
+  height: 17rem;
+  padding: 4rem;
+  top:45%;
+  left: 67%;
+  border-radius: 150px;
+  text-align: center;
+  color: #cca352;
+  background: rgba( 13, 84, 70, .2);
+  -webkit-backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
+  z-index: 1;
+  position: absolute;
+}
+
 @mixin textosgri1{
   margin-top: 20px;
   font-size: medium;
@@ -167,11 +265,12 @@ section {
   font-weight: 700;
   color:white;
   line-height: 0.6cm;
-
 }
+
 .texto1{
   @include textosgri1;
 }
+
 .texto2{
   @include textosgri1;
 }
@@ -281,105 +380,6 @@ section {
 .verde{
   background-color: #0d5446;
 }
-/*contacto*/@at-root
-body{
-  .signupFrm {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
-  }
-
-.form {
-    background-color: white;
-    width: 400px;
-    border-radius: 8px;
-    padding: 20px 40px;
-    box-shadow: 0 10px 25px rgba(92, 99, 105, .2);
-  }
-  
-.title {
-    font-size: 50px;
-    margin-bottom: 50px;
-  }
-
-.inputContainer {
-    position: relative;
-    height: 45px;
-    width: 90%;
-    margin-bottom: 17px;
-  }
-
-.input {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    height: 100%;
-    width: 100%;
-    border: 1px solid #DADCE0;
-    border-radius: 7px;
-    font-size: 16px;
-    padding: 0 100px;
-    outline: none;
-    background: none;
-    z-index: 1;
-  }
-
-::placeholder {
-    color: transparent;
-  }
-
-.label {
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    padding: 0 4px;
-    background-color: transparent;
-    color: #12c830;
-    font-size: 16px;
-    transition: 0.5s;
-    z-index: 0;
-  }
-
-.submitBtn {
-    display: block;
-    margin-left: auto;
-    padding: 15px 30px;
-    border: none;
-    background-color: rgb(224, 232, 227);
-    color: white;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 30px;
-  }
-  
-.submitBtn:hover {
-    background-color: #e8ece9;
-    transform: translateY(-2px);
-  }
-
-.input:focus + .label {
-    top: -7px;
-    left: 3px;
-    z-index: 10;
-    font-size: 14px;
-    font-weight: 600;
-    color: rgb(0, 9, 2);
-  }
-
-.input:focus {
-    border: 2px solid rgb(8, 178, 84);
-  }
-
-  .input:not(:placeholder-shown)+ .label {
-    top: -7px;
-    left: 3px;
-    z-index: 10;
-    font-size: 14px;
-    font-weight: 600;
-  }  
-}
 
 /*FOOTER*/
 .container {
@@ -391,9 +391,7 @@ body{
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
   max-width: 250rem;
-  height: 20rem;
-  overflow: auto;
-  resize: horizontal;
+  height: 20rem;    
 }
 
 a{
@@ -410,4 +408,10 @@ a{
   margin-block: 1,5rem;
   border: none;
   color: white;
+  border-top: 1px solid;
+}
+
+.list-bottom {
+  display: inline-flex;
+  gap: 1rem;
 }
