--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-/*EFECTO NIEVE*/
+/*EFECTO NIEVE PAG EMMA*/
 .intro,
 .intro a{
   color:#fff; 
@@ -34,7 +34,7 @@ body, a, a:hover {
   cursor: url(http://cur.cursors-4u.net/holidays/hol-4/hol356.cur), progress;
 }
 
-/*NAVBAR*/
+/*NAVBAR EMMA*/
 @mixin navegadorflex ($contenedor, $distribucion, $agrupacion, $colorfondo1, $titulos, $anchoweb, $altoweb, $fijacion){
     display: $contenedor;
     justify-content: $distribucion;
@@ -72,6 +72,13 @@ body, a, a:hover {
     color: #d4131f;
 }
 
+@media screen and (max-width: 768px){
+  .navbar{
+    height: 28%;
+  }
+}
+
+/*PARTE AURI*/
 h1{
   font-family: 'Chicle';
   padding-top: 20%;
@@ -142,8 +149,8 @@ h1{
   @include fotos;
 }
 
-/*SECTION*/
-section {
+/*SECTION EMMA*/
+.parteEmma {
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 8rem;
     padding-bottom: -1rem;
@@ -208,6 +215,7 @@ section {
   position: absolute;
 }
 
+/*PARTE AURI*/
 @mixin textosgri1{
   margin-top: 20px;
   font-size: medium;
@@ -331,10 +339,10 @@ section {
   background-color: #0d5446;
 }
 
-/*FOOTER*/
+/*FOOTER EMMA*/
 .container {
   display: grid;
-  padding-left: 17rem;
+  padding-left: 10%;
   padding-block: 2rem;
   background-color: #d4131f;
   color: white;
