Parte Silvia IIII

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-/*EFECTO NIEVE PAG EMMA*/
+@charset "UTF-8";
+/*EFECTO NIEVE*/
 .intro,
 .intro a {
   color: #fff;
@@ -151,7 +152,7 @@ body, a, a:hover {
   cursor: url(http://cur.cursors-4u.net/holidays/hol-4/hol356.cur), progress;
 }
 
-/*NAVBAR EMMA*/
+/*NAVBAR*/
 .navbar {
   display: flex;
   justify-content: space-evenly;
@@ -185,12 +186,6 @@ body, a, a:hover {
   color: #d4131f;
 }
 
-@media screen and (max-width: 768px) {
-  .navbar {
-    height: 28%;
-  }
-}
-/*PARTE AURI*/
 h1 {
   font-family: "Chicle";
   padding-top: 20%;
@@ -198,6 +193,114 @@ h1 {
   text-align: center;
 }
 
+/*PESTAÑA REYES*/
+.colorbody {
+  background-color: #096552;
+}
+
+.titulo {
+  text-align: center;
+  color: white;
+  padding-top: 10%;
+  font-family: "chicle", "Courier New", Courier,  monospace;
+  font-weight: lighter;
+}
+
+.parrafos {
+  text-align: center;
+  color: white;
+  margin-top: 50%;
+  margin-left: 20%;
+  align-items: center;
+  font-family: "Comfortaa", cursive;
+  font-weight: bold;
+  margin-block: 40px;
+  height: 85vh;
+  background-color: #0d5446;
+  width: 900px;
+  border-radius: 8px;
+  padding: 20px 40px;
+  box-shadow: 0 10px 25px rgba(92, 99, 105, 0.2);
+}
+
+.reyesbanner {
+  margin-top: 10%;
+  width: 100%;
+  height: 80%;
+}
+
+button {
+  height: 7%;
+  background-color: #d4131f;
+  color: white;
+  border-radius: 10%;
+  font-family: "Chicle", cursive;
+  border: #d4131f;
+  align-items: center;
+  margin-top: 25%;
+}
+
+#reyes {
+  width: 300px;
+  padding: 10px;
+  align-items: center;
+}
+
+/*FIN PESTAÑA REYES*/
+/*PAGINA SILVIA*/
+.colorbody {
+  background-color: #096552;
+}
+
+.titulo {
+  text-align: center;
+  color: white;
+  padding-top: 10%;
+  font-family: "chicle", "Courier New", Courier,  monospace;
+  font-weight: lighter;
+}
+
+.parrafos {
+  text-align: center;
+  color: white;
+  margin-top: 50%;
+  margin-left: 20%;
+  align-items: center;
+  font-family: "Comfortaa", cursive;
+  font-weight: bold;
+  margin-block: 40px;
+  height: 85vh;
+  background-color: #0d5446;
+  width: 900px;
+  border-radius: 8px;
+  padding: 20px 40px;
+  box-shadow: 0 10px 25px rgba(92, 99, 105, 0.2);
+}
+
+.baner {
+  margin-top: 5%;
+  width: 100%;
+  height: 80%;
+}
+
+button {
+  height: 7%;
+  background-color: #d4131f;
+  color: white;
+  border-radius: 10%;
+  font-family: "Chicle", cursive;
+  border: #d4131f;
+  align-items: center;
+  margin-top: 25%;
+}
+
+#papa {
+  width: 300px;
+  padding: 10px;
+  align-items: center;
+}
+
+/*FIN PAGINA SILVIA*/
 .grid {
   display: grid;
   grid-template-columns: 400px 400px 400px;
@@ -262,8 +365,8 @@ h1 {
   text-align: center;
 }
 
-/*SECTION EMMA*/
-.parteEmma {
+/*SECTION*/
+section {
   font-family: Arial, Helvetica, sans-serif;
   padding-top: 8rem;
   padding-bottom: -1rem;
@@ -274,7 +377,6 @@ h1 {
   -webkit-animation: movimiento 5s linear infinite alternate;
           animation: movimiento 5s linear infinite alternate;
 }
-
 
 @-webkit-keyframes movimiento {
   from {
@@ -330,8 +432,6 @@ h1 {
   z-index: 1;
   position: absolute;
 }
-
-/*PARTE AURI*/
 
 .texto1 {
   margin-top: 20px;
@@ -475,118 +575,10 @@ h1 {
   background-color: #0d5446;
 }
 
-/*contacto*/
-body .signupFrm {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 50vh;
-}
-body .form {
-  background-color: white;
-  width: 400px;
-  border-radius: 8px;
-  padding: 20px 40px;
-  box-shadow: 0 10px 25px rgba(92, 99, 105, 0.2);
-}
-body .title {
-  font-size: 50px;
-  margin-bottom: 50px;
-}
-body .inputContainer {
-  position: relative;
-  height: 45px;
-  width: 90%;
-  margin-bottom: 17px;
-}
-body .input {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  height: 100%;
-  width: 100%;
-  border: 1px solid #DADCE0;
-  border-radius: 7px;
-  font-size: 16px;
-  padding: 0 100px;
-  outline: none;
-  background: none;
-  z-index: 1;
-}
-body ::-moz-placeholder {
-  color: transparent;
-}
-body :-ms-input-placeholder {
-  color: transparent;
-}
-body ::placeholder {
-  color: transparent;
-}
-body .label {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  padding: 0 4px;
-  background-color: transparent;
-  color: #12c830;
-  font-size: 16px;
-  transition: 0.5s;
-  z-index: 0;
-}
-body .submitBtn {
-  display: block;
-  margin-left: auto;
-  padding: 15px 30px;
-  border: none;
-  background-color: rgb(224, 232, 227);
-  color: white;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 16px;
-  margin-top: 30px;
-}
-body .submitBtn:hover {
-  background-color: #e8ece9;
-  transform: translateY(-2px);
-}
-body .input:focus + .label {
-  top: -7px;
-  left: 3px;
-  z-index: 10;
-  font-size: 14px;
-  font-weight: 600;
-  color: rgb(0, 9, 2);
-}
-body .input:focus {
-  border: 2px solid rgb(8, 178, 84);
-}
-body .input:not(:-moz-placeholder-shown) + .label {
-  top: -7px;
-  left: 3px;
-  z-index: 10;
-  font-size: 14px;
-  font-weight: 600;
-}
-body .input:not(:-ms-input-placeholder) + .label {
-  top: -7px;
-  left: 3px;
-  z-index: 10;
-  font-size: 14px;
-  font-weight: 600;
-}
-body .input:not(:placeholder-shown) + .label {
-  top: -7px;
-  left: 3px;
-  z-index: 10;
-  font-size: 14px;
-  font-weight: 600;
-}
-
 /*FOOTER*/
-
 .container {
   display: grid;
-  padding-left: 10%;
+  padding-left: 17rem;
   padding-block: 2rem;
   background-color: #d4131f;
   color: white;
@@ -594,8 +586,6 @@ body .input:not(:placeholder-shown) + .label {
   font-size: 1rem;
   max-width: 250rem;
   height: 20rem;
-  overflow: auto;
-  resize: horizontal;
 }
 
 a {
@@ -612,4 +602,10 @@ a {
   margin-block: 1, 5rem;
   border: none;
   color: white;
+  border-top: 1px solid;
+}
+
+.list-bottom {
+  display: inline-flex;
+  gap: 1rem;
 }/*# sourceMappingURL=style.css.map */
